--- a/templates/editor/contrast_checker.html.twig
+++ b/templates/editor/contrast_checker.html.twig
@@ -56,22 +56,22 @@
     <p class="wcag__level wcag__level--aa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-large="pass"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aa-large="fail"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AA&nbsp; duży font (3:1)</span>
+      <span class="wcag__level-text">AA&nbsp; Duzy tekst (3:1)</span>
     </p>
     <p class="wcag__level wcag__level--aa-small">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-small="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aa-small="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AA&nbsp; mały font (4.5:1)</span>
+      <span class="wcag__level-text">AA&nbsp; Mały tekst (4.5:1)</span>
     </p>
     <p class="wcag__level wcag__level--aaa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aaa-large="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aaa-large="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AAA duży font (4.5:1)</span>
+      <span class="wcag__level-text">AAA Duży tekst (4.5:1)</span>
     </p>
     <p class="wcag__level wcag__level--aaa-small">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aaa-small="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aaa-small="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AAA mały font (7:1)</span>
+      <span class="wcag__level-text">AAA Mały tekst (7:1)</span>
     </p>
   </section>
 
