--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
 
 
 	<div class="main-page__container">
-		<div class="main-page__content">
+		<div class="main-page__content text-center">
 			<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1100.25 150">
 				<defs>
 					<style>
@@ -60,6 +60,8 @@
 				</g>
 			</svg>
 		</div>
+
+		
 	</div>
 
 
