--- a/templates/editor/form_template.html.twig
+++ b/templates/editor/form_template.html.twig
@@ -39,7 +39,7 @@
             <p class="input__form__label">{{ project.rgbToHex(project.darkShades) }}</p>
             <input class="input__form__color input__input input__input__color" type="color" value="{{ project.rgbToHex(project.darkShades) }}" name="darkShades"></input>
         </div>
-        <input type="submit" value="Aktualizuj">
+        <input type="submit" value="Zapisz">
     </section>
     
 </form>   
