--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -18,7 +18,7 @@
 
 			<p class="ml-2 mt-1">Wybranie palety kolorów to jedno z najważniejszych zadań przy projektowaniu serwisu internetowego. Generator palety kolorów ułatwia i automatyzuje ten proces.</p>
 
-			<h3>Jak działa generator palety?</h3>
+			<h3 class="mt-4">Jak działa generator palety?</h3>
 
 			<h4 class="ml-3 mb-0">Skojarzenia</h4>
 
@@ -28,7 +28,7 @@
 
 			<p class="ml-2 mt-1">Aplikacja koncentruje się na procesie wyboru koloru, dlatego projekty są proste i mają służyć tylko jako podpowiedź przy dalszym tworzeniu aplikacji internetowej.</p>
 
-			<p class="ml-2 mb-0">Użytkownik ma do wyboru dwa podstawowe projekty takie jak:</p>
+			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe projekty takie jak:</p>
 
 			<ul>
 				<li>
@@ -48,7 +48,20 @@
 
 			<h4 class="ml-3 mb-0">Gotowy projekt</h4>
 
-			<p class="ml-2 mt-1">Generator na podstawie wprowadzonych danych wybierze kolor główny, dobierze kolory uzupełniające, zastosuje paletę do projektu. Użytkownik zostanie przekierowany na stronę wyświetlającą gotowy projekt. Użytkownik ma dodatkowo możliwość sprawdzenia kontrastu między elementami strony, indywidualnego dostosowania zaproponowanych kolorów i zapisania projektu.</p>
+            <p>Generator na podstawie wprowadzonych danych wybierze kolor główny, dobierze kolory uzupełniające, zastosuje paletę do projektu. Użytkownik zostanie przekierowany na stronę wyświetlającą gotowy projekt.</p>
+
+			<p>Użytkownik ma dodatkowo możliwość:</p>
+<ul>
+<li>sprawdzenia kontrastu między kolorem tekstu, a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1, </li>
+<li>indywidualnego dostosowania zaproponowanych kolorów </li>
+
+{#   
+  Aby dostosować zaproponowane kolory należy:
+w panelu po lewej stronie ustawić nowy kolor ,
+kliknąć przycisk “Zapisz”
+
+Aby ponownie wygenerować paletę:
+w panelu po lewej stronie kliknąć przycisk “Generuj paletę” #}
 
 		</div>
 
