--- a/public/css/company.css
+++ b/public/css/company.css
@@ -1,4 +1,3 @@
-
 .center__bar--one {
     height: 5px;
     width: 70%;
@@ -65,7 +64,7 @@
     gap: 10%;
     margin-top: 10%;
     margin-left: 5%;
-    font-size: 1rem;
+    font-size: 14pt;
 }
 
 .navigation__bar--one {
@@ -96,10 +95,15 @@
 }
 
 .right__center p:nth-child(1) {
-    font-size: 1.3rem;
+    font-size: 17pt;
     margin-top: 10%;
     margin-left: 5%;
     margin-right: 1%;
+}
+
+.right__center p:nth-child(2) {
+    margin-right: 7%;
+    font-size: 10pt;
 }
 
 .right__center h2 {
