--- a/templates/default/_navbar.html.twig
+++ b/templates/default/_navbar.html.twig
@@ -10,16 +10,22 @@
 		</a>
 	</li>
 	{% if is_granted('ROLE_USER') %}
-	<li class="nav-item">
-		<a href="{{ url('project_index') }}" class="navbar-brand">
-			{{ 'title_project_list'|trans }}
-		</a>
-	</li>
+		<li class="nav-item">
+			<a href="{{ url('project_index') }}" class="navbar-brand">
+				{{ 'title_project_list'|trans }}
+			</a>
+		</li>
 	{% endif %}
 
 	<li class="nav-item ml-4">
 		<a href="{{ url('about') }}" class="navbar-brand">
 			{{ 'title_about'|trans }}
+		</a>
+	</li>
+
+	<li class="nav-item ml-4">
+		<a href="{{ url('info') }}" class="navbar-brand">
+			{{ 'title_info'|trans }}
 		</a>
 	</li>
 
@@ -46,6 +52,4 @@
 			</a>
 		</li>
 	{% endif %}
-	</li>
-
-</ul>
+</li></ul>
