--- a/templates/editor/contrast_checker.html.twig
+++ b/templates/editor/contrast_checker.html.twig
@@ -18,40 +18,47 @@
   
   <header class="container__header header">
     <h1 class="header__text">Kontrast</h1>
-    {# <button type="button" class="header__button" js-swap aria-label="Swap foreground and background colors">
-      <svg aria-hidden="true"><use xlink:href="#swap"></use></svg>
-    </button> #}
   </header>
+
+<form action="{{ url('project_colors_edit', {'id': project.id}) }}" method="GET" class="container">
 
   <section class="container__body">
     <div class="input input--container">
-      <input type="text" id="foreground" placeholder="&nbsp;" name="foreground" value="{{ project.rgbToHex(project.lightShades) }}" spellcheck="false" class="input__input" js-foreground>
+      <input type="text" id="foreground" placeholder="&nbsp;" name="foreground" value="{{ project.rgbToHex(project.lightShades) }}" spellcheck="false" class="input__input" js-foreground name="lightShades">
       <label for="foreground" class="input__label">Tekst:</label>
       <p class="input__error" js-foreground-err>Nieprawidłowy kolor</p>
-      <input js-foreground-color-input class="input__color input__color--foreground" type="color" aria-hidden="true">
+      <input js-foreground-color-input class="input__color input__color--foreground" type="color" aria-hidden="true" name="lightShades">
     </div>
     <div class="input input--container">
-      <input type="text" id="background" placeholder="&nbsp;" name="background" value="{{ project.rgbToHex(project.darkShades) }}" spellcheck="false" class="input__input" js-background>
+      <input type="text" id="background" placeholder="&nbsp;" name="background" value="{{ project.rgbToHex(project.darkShades) }}" spellcheck="false" class="input__input" js-background name="darkShades">
       <label for="background" class="input__label">Tło:</label>
       <p class="input__error" js-background-err>Nieprawidłowy kolor</p>
-      <input js-background-color-input class="input__color input__color--background" type="color" aria-hidden="true">
+      <input js-background-color-input class="input__color input__color--background" type="color" aria-hidden="true" name="darkShades">
     </div>
+    <div style="display:none;">
+        <div class="input input__form--container">
+            <p class="input__form__label">{{ project.rgbToHex(project.lightAccent) }}</p>
+            <input class="input__form__color input__input input__input__color" type="color" value="{{ project.rgbToHex(project.lightAccent) }}" name="lightAccent"></input>
+        </div>
+        <div class="input input__form--container">
+            <p class="input__form__label">{{ project.rgbToHex(project.baseColor) }}</p>
+            <input class="input__form__color input__input input__input__color" type="color" value="{{ project.rgbToHex(project.baseColor) }}" name="baseColor"></input>
+        </div>
+        <div class="input input__form--container">
+            <p class="input__form__label">{{ project.rgbToHex(project.darkAccent) }}</p>
+            <input class="input__form__color input__input input__input__color" type="color" value="{{ project.rgbToHex(project.darkAccent) }}" name="darkAccent"></input>
+        </div >
+    </div>
+
+    <input type="submit" value="Zapisz">
   </section>
   
-  {# <section class="container__warning warning">
-    <p class="warning__container">
-      <span class="warning__text-icon"><svg role="img" aria-label="caution"><use xlink:href="#caution"></use></svg></span>
-      <span class="warning__text-text">Opacity values will not work as desired.</span>
-    </p>
-  </section> #}
-  
+  </form>   
+
   <section class="container__body wcag wcag--container">
     <p class="wcag__ratio">
-      {# <a href="https://www.w3.org/TR/WCAG21/#contrast-minimum" target="_blank" title="Web Content Accessibility Guidelines">
-        <abbr title="Web Content Accessibility Guidelines">WCAG</abbr>
-      </a>  #}
       Poziom kontrastu: 
-        <output id="output" js-output>4.9</output>
+      <output id="output" js-output>4.9</output>
     </p>
     <p class="wcag__level wcag__level--aa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-large="pass"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
@@ -75,7 +82,4 @@
     </p>
   </section>
 
-  {# <footer class="container__footer result result--container">
-    <p class="result__text" contenteditable="true">Click to edit Me!</p>
-  </footer> #}
 </main>
