--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -20,48 +20,44 @@
 
 			<h3 class="mt-4">Jak działa generator palety?</h3>
 
-			<h4 class="ml-3 mb-0">Skojarzenia</h4>
+			<h5 class="ml-3 mb-1">Skojarzenia</h4>
 
-			<p class="ml-2 mt-1">Użytkownik serwisu wypełnia formularz, w którym musi zaznaczyć cztery słowa-skojarzenia, które najlepiej pasują do charakterystyki strony, której projekt chce wykonać.</p>
+			<p class="ml-2 mt-0">Użytkownik serwisu wypełnia formularz, w którym musi zaznaczyć cztery słowa-skojarzenia, które najlepiej pasują do charakterystyki strony, której projekt chce wykonać.</p>
 
-			<h4 class="ml-3 mb-0">Wybór układu strony</h4>
+			<h5 class="ml-3 mb-1">Wybór układu strony</h4>
 
-			<p class="ml-2 mt-1">Aplikacja koncentruje się na procesie wyboru koloru, dlatego projekty są proste i mają służyć tylko jako podpowiedź przy dalszym tworzeniu aplikacji internetowej.</p>
+			<p class="ml-2 mt-0">Aplikacja koncentruje się na procesie wyboru koloru, dlatego projekty są proste i mają służyć tylko jako podpowiedź przy dalszym tworzeniu aplikacji internetowej.</p>
 
 			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe projekty takie jak:</p>
 
 			<ul>
-				<li>
-					strona reklamująca produkt,
-				</li>
-				<li>
-					strona reklamująca firmę,
-				</li>
-				<li>
-					strona z wiadomościami,
-				</li>
-				<li>
-					blog.
-				</li>
+				<li>strona reklamująca produkt,</li>
+				<li>strona reklamująca firmę,</li>
+				<li>strona z wiadomościami,</li>
+				<li>blog.</li>
 			</ul>
 
 
-			<h4 class="ml-3 mb-0">Gotowy projekt</h4>
+			<h5 class="ml-3 mb-1">Gotowy projekt</h4>
 
-            <p>Generator na podstawie wprowadzonych danych wybierze kolor główny, dobierze kolory uzupełniające, zastosuje paletę do projektu. Użytkownik zostanie przekierowany na stronę wyświetlającą gotowy projekt.</p>
+			<p>Generator na podstawie wprowadzonych danych wybierze kolor główny, dobierze kolory uzupełniające, zastosuje paletę do projektu. Użytkownik zostanie przekierowany na stronę wyświetlającą gotowy projekt.</p>
 
-			<p>Użytkownik ma dodatkowo możliwość:</p>
-<ul>
-<li>sprawdzenia kontrastu między kolorem tekstu, a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1, </li>
-<li>indywidualnego dostosowania zaproponowanych kolorów </li>
+			<p class="ml-2 mb-0">Użytkownik ma dodatkowo możliwość:</p>
+			<ul>
+				<li>sprawdzenia kontrastu między kolorem tekstu, a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1,</li>
+				<li>indywidualnego dostosowania zaproponowanych kolorów.</li>
+			</ul>
 
-{#   
-  Aby dostosować zaproponowane kolory należy:
-w panelu po lewej stronie ustawić nowy kolor ,
-kliknąć przycisk “Zapisz”
+			<p class="ml-2 mb-0">Aby dostosować zaproponowane kolory należy:</p>
+			<ul>
+				<li>w panelu po lewej stronie ustawić nowy kolor,</li>
+				<li>kliknąć przycisk “Zapisz”.</li>
+			</ul>
 
-Aby ponownie wygenerować paletę:
-w panelu po lewej stronie kliknąć przycisk “Generuj paletę” #}
+			<p class="ml-2 mb-0">Aby ponownie wygenerować paletę:</p>
+			<ul>
+				<li>w panelu po lewej stronie kliknąć przycisk “Generuj paletę”.</li>
+			</ul>
 
 		</div>
 
