--- a/public/css/product.css
+++ b/public/css/product.css
@@ -4,7 +4,7 @@
 }
 
 .left {
-    width: 90%;
+    width: 70%;
 }
 
 .left__top {
@@ -16,49 +16,92 @@
 }
 
 .right {
-    width: 10%;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .logo {
     font-size: 72px;
-    padding-left: 15%;
+    padding-left: 5%;
     padding-top: 5%;
 }
 
-.logo svg {
-    position: absolute;
-    height: 12%;
-    width: 12%;
-    left: 11%;
-    top: 3%;
+.right__top {
+    height: 30%;
 }
+
+.right__center {
+    height: 60%;
+}
+
+.right__center p:nth-child(1) {
+    font-size: 17pt;
+    margin-top: 20%;
+    margin-right: 1%;
+}
+
+.right__center p:nth-child(2) {
+    margin-right: 10%;
+    font-size: 10pt;
+}
+
+.square {
+    width: 25rem;
+    height: 25rem;
+    position: absolute;
+    top: 45%;
+    left: 25%;
+}
+
+.circle {
+    position: absolute;
+    width: 15rem;
+    height: 15rem;
+    top: 70%;
+    left: 40%;
+    shape-outside: circle();
+    clip-path: circle();
+}
+
+.triangle {
+    position: absolute;
+    top: 75%;
+    left: 20%;
+    width: 0;
+    height: 0;
+    border-left: 5rem solid transparent;
+    border-right: 5rem solid transparent;
+    border-bottom: 9rem solid;
+}
+
+.right__bottom {
+    height: 10%;
+
+}
+
+.right__bottom .social {
+    display: flex;
+    gap: 3%;
+    justify-content: flex-end;
+    margin-right: 10%;
+}
+
 
 .navigation {
     display: flex;
     flex-direction: column;
-    gap: 10%;
     font-size: 18px;
-    align-items: center;
-    margin-top: 30%;
-    margin-right: 10%;
+    text-align: end;
+    margin-right: 15%;
+    margin-top: 10%;
+    padding-right: 8%;
+    border-right: solid 3px;
+
 }
 
 .graphic-element svg {
     width: 100%;
     height: 100%;
-    padding-left: 5%;
 }
-
-@media (min-width: 1440px) {
-
-    .logo {
-        font-size: 72px;
-        padding-left: 12%;
-        padding-top: 3%;
-    }
-
-    .logo p {
-        padding-left: 5%;
-    }
-}
-
