--- a/public/css/company.css
+++ b/public/css/company.css
@@ -1,142 +1,98 @@
-.center__bar--one {
-    height: 5px;
-    width: 70%;
-    margin-left: 30%;
-    margin-top: 40%;
-}
-
-.center__bar--two {
-    height: 7px;
-    width: 75%;
-    margin-left: 20%;
-    margin-right: 5%;
-}
-
-.center__bar--three {
-    height: 7px;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 8%;
-}
-
-.center__bar--four {
-    height: 7px;
-    width: 90%;
-    margin-top: -1%;
-    margin-right: 10%;
-}
-
-.center__bar--five {
-    height: 7px;
-    width: 75%;
-    margin-left: 25%;
-}
-
 .content {
-    display: flex;
-    height: 100vh;
+    height: 100%;
 }
 
-.left {
-    width: 60%;
+.element--dark {
+    margin-top: 2%;
+    height: 2%;
+    width: 15%;
+    align-self: flex-end;
+
+}
+
+.element--light {
+    margin-top: 2%;
+    margin-left: 6%;
+    height: 2%;
+    width: 20%;
+}
+
+.element--base {
+    margin-top: 2%;
+    height: 3%;
+    width: 40%;
+    align-self: flex-start;
+}
+
+.top {
+    height: 10%;
     display: flex;
+    flex-direction: row;
+}
+
+
+.center {
+    padding-top: 5%;
+    height: 80%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
 }
 
-.left__top {
+.center h1 {
+    font-size: 28px;
+    text-align: center;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.center h3 {
+    font-size: 18px;
+    text-align: center;
+}
+
+
+.bottom {
+    height: 10%;
+}
+
+.social {
     display: flex;
-    align-items: center;
-    margin-top: 5%;
-    font-size: 72px;
-    margin-left: 10%;
+    justify-content: flex-end;
+    padding-right: 5%;
+    gap: 2%;
 }
-
-.left__bottom {
-    margin-top: 10%;
-    margin-left: 8%;
-}
-
 
 .navigation {
+    width: 70%;
     display: flex;
-    flex-direction: row;
-    gap: 10%;
-    margin-top: 10%;
-    margin-left: 5%;
-    font-size: 14pt;
+    justify-content: flex-end;
+    gap: 2%;
+    margin-top: 3%;
+    padding-right: 3%;
+    padding-bottom: 3%;
+    border-bottom: 0.8rem solid;
 }
 
-.navigation__bar--one {
-    height: 7px;
-    width: 90%;
-    margin-right: 10%;
+.photo {
+    height: 55%;
+    width: 95%;
+    background-color: rgb(158, 162, 165);
+    margin-bottom: 4%;
 }
 
-.navigation__bar--two {
-    height: 4px;
-    width: 40%;
-    margin-right: 20%;
-    margin-left: 40%;
+.navigation p {
+    height: 20%;
 }
 
-.right {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
+.navigation p:nth-child(2) {
+    border-bottom: 4px solid;
 }
 
-.right__top {
-    height: 10%;
-}
-
-.right__center {
-    height: 80%;
-}
-
-.right__center p:nth-child(1) {
-    font-size: 17pt;
-    margin-top: 10%;
-    margin-left: 5%;
-    margin-right: 1%;
-}
-
-.right__center p:nth-child(2) {
-    margin-right: 7%;
-    font-size: 10pt;
-}
-
-.right__center h2 {
-    margin-top: 10%;
-    margin-left: 14%;
-}
-
-.right__bottom {
-    height: 10%;
-}
-
-.right__bottom .social {
-    display: flex;
-    gap: 10%;
-    margin-left: 40%;
-}
-
-
-.graphic-element {
-    display: flex;
-    flex-direction: row;
-}
-
-svg {
-    height: 80%;
-    width: 80%;
-    margin-left: 0;
-}
-
-@media (max-width: 1440px) {
-    .left__bottom {
-        margin-top: 30%;
-        margin-left: 8%;
-    }
-
+.logo {
+    width: 30%;
+    font-size: 72px;
+    padding-left: 3%;
+    padding-top: 3%;
 }
