--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,12 @@ body, html {
     font-family: "Operator Mono", "Inconsolata", "Roboto Mono", monospace;
 }
 
+.nav-item:hover, .nav-item:focus {
+    background-color: #3792d3;
+    color: rgb(255, 255, 255);
+}
+
+
 .main-page__header {
     align-items: center;
     display: flex;
@@ -14,14 +20,14 @@ body, html {
     margin-bottom: 10vh;
 }
 
-.main-page__header > a {
+.main-page__header>a {
     font-size: 2rem;
     margin-top: 2rem;
     padding: 2rem;
     border: 1px solid black;
 }
 
-.main-page__header > a:hover {
+.main-page__header>a:hover {
     border: none;
     background-color: #3792d3;
     border: 1px solid #3792d3;
@@ -49,7 +55,7 @@ body, html {
     width: 100%;
 }
 
-.main-page__content p, li{
+.main-page__content p, li {
     text-align: start;
     font-size: medium;
 }
@@ -58,6 +64,6 @@ body, html {
     width: 80%;
 }
 
-.about{
+.about {
     width: 55%;
 }
