--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,95 +1,118 @@
 .content {
     height: 100%;
-}
-
-.element--dark {
-    margin-top: 2%;
-    height: 2%;
-    width: 15%;
-    align-self: flex-end;
-}
-
-.element--light {
-    margin-top: 2%;
-    margin-left: 6%;
-    height: 2%;
-    width: 20%;
-}
-
-.element--base {
-    margin-top: 2%;
-    height: 3%;
-    width: 40%;
-    align-self: flex-start;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .top {
     height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    /* border: 1px solid red; */
+}
+
+.bottom {
+    width: 100%;
+    height: 90%;
+    /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
 }
 
-.center {
-    padding-top: 5%;
-    height: 80%;
+.left {
+    width: 70%;
+    height: 100%;
+    /* border: 1px solid blue; */
+}
+
+.right {
+    width: 30%;
+    height: 100%;
+    /* border-left: 1px solid green; */
+}
+
+.right__post {
+    display: flex;
+    margin-top: 7%;
+}
+
+.right__image {
+    margin: 10px;
+    height: 7rem;
+    width: 30%;
+    background-color: grey;
+}
+
+.right__content {
+    width: 60%;
+    margin: 10px;
+}
+
+.right__content p {
+    padding-bottom: 4%;
+    font-size: 12px;
+    width: 80%;
+    border-bottom: 2px solid;
+}
+
+.right__content h4 {
+    width: 60%;
+    margin-top: 0.5rem;
+    font-size: 18px;
+    border-bottom: 2px solid;
+}
+
+.left {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    gap: 8%;
+    padding-top: 5%;
 }
 
-.center h1 {
-    font-size: 28px;
-    text-align: center;
-    padding-left: 2%;
-    padding-right: 2%;
+.left__post {
+    width: 80%;
+    height: 300px;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-.center h3 {
+.left__post--image {
+    height: 19rem;
+    width: 19rem;
+    background-color: gray;
+}
+
+.left__post--content {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.left__post--content p {
+    padding-top: 2%;
+    border-top: 1px solid;
+}
+
+.top__button {
+    height: 50%;
+    width: 10%;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top__button p {
+    margin: 0;
     font-size: 18px;
-    text-align: center;
-}
-
-.bottom {
-    height: 10%;
-}
-
-.social {
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 5%;
-    gap: 2%;
-}
-
-.navigation {
-    width: 70%;
-    display: flex;
-    justify-content: flex-end;
-    gap: 2%;
-    margin-top: 3%;
-    padding-right: 3%;
-    padding-bottom: 3%;
-    border-bottom: 0.8rem solid;
-}
-
-.photo {
-    height: 55%;
-    width: 95%;
-    background-color: rgb(158, 162, 165);
-    margin-bottom: 4%;
-}
-
-.navigation p {
-    height: 20%;
-}
-
-.navigation p:nth-child(2) {
-    border-bottom: 4px solid;
-}
-
-.logo {
-    width: 30%;
-    font-size: 72px;
-    padding-left: 3%;
-    padding-top: 3%;
 }
