--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -28,7 +28,7 @@
 
 			<p class="ml-2 mt-0">Aplikacja koncentruje się na procesie wyboru koloru, dlatego projekty są proste i mają służyć tylko jako podpowiedź przy dalszym tworzeniu aplikacji internetowej.</p>
 
-			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe projekty takie jak:</p>
+			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe układy takie jak:</p>
 
 			<ul>
 				<li>strona reklamująca produkt,</li>
