--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -11,8 +11,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 3%;
-    /* border: 1px solid red; */
 }
 
 .bottom {
@@ -70,14 +68,15 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    margin-left: 2%;
     gap: 8%;
     padding-top: 5%;
 }
 
 .left__post {
-    width: 80%;
-    height: 300px;
+    width: 100%;
+    height: 50%;
     /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
@@ -94,7 +93,7 @@
     width: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -104,15 +103,59 @@
 }
 
 .top__button {
-    height: 50%;
-    width: 10%;
-    /* border: 1px solid red; */
+    height: 30%;
+    width: 8%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 5%;
+
+}
+
+.top__button-inactive {
+    border-bottom: 2px solid;
 }
 
 .top__button p {
     margin: 0;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.square {
+    width: 5rem;
+    height: 5rem;
+    z-index: 3;
+    margin-top: 2%;
+}
+
+.circle {
+    padding-left: 2rem;
+    width: 4rem;
+    height: 4rem;
+    shape-outside: circle();
+    clip-path: circle();
+    z-index: 1;
+}
+
+.triangle {
+    /* position: absolute;
+    top: 10%;
+    left: 15%; */
+    margin-top: auto;
+    width: 0;
+    height: 0;
+    border-left: 1rem solid transparent;
+    border-right: 1rem solid transparent;
+    border-bottom: 2rem solid;
+}
+
+.graphic-element {
+    display: flex;
+    flex-direction: row;
+    margin-right: auto;
+    margin-left: 3%;
+    margin-top: 2%;
+    display: flex;
+    width: 20%;
+    gap: 3%;
 }
