--- a/templates/editor/blog_template.html.twig
+++ b/templates/editor/blog_template.html.twig
@@ -1,10 +1,15 @@
 <div class="content" style="background-color: {{ project.lightShades }}">
-	<div class="top" style="background-color: {{ project.baseColor}}">
+	<div class="top" style="background-color: {{ project.lightShades}}">
+		<div class="graphic-element">
+			<div class="circle" style="background-color: {{ project.baseColor }};"></div>
+			<div class="triangle" style="border-color: {{ project.baseColor }};"></div>
+			<div class="square" style="background-color: {{ project.baseColor }};"></div>
+		</div>
 		<div class="top__button" style="background-color: {{ project.darkShades}}">
 			<p style="color: {{ project.lightShades }}">Nisl vel</p>
 		</div>
-		<div class="top__button" style="background-color: {{ project.darkShades}}">
-			<p style="color: {{ project.lightShades }}">Laoreet</p>
+		<div class="top__button top__button-inactive" style="border-color: {{ project.darkAccent}}">
+			<p style="color: {{ project.darkShades }}">Laoreet</p>
 		</div>
 	</div>
 	<div class="bottom">
@@ -13,14 +18,14 @@
 				<div class="left__post--image"></div>
 				<div class="left__post--content">
 					<h3>Placerat amet, adipiscing vulputate molestie odio quis.</h3>
-					<p style="border-color: {{ project.lightAccent }};">Malesuada sit vulputate nunc diam placerat facilisis nibh volutpat. Nisl libero proin in nullam. Vulputate tellus venenatis, lectus velit consequat morbi. Massa arcu at quisque dui, integer lectus nulla. Nisl pulvinar fermentum quisque nisi, vestibulum mollis sed sed. Eleifend egestas id mi molestie ullamcorper dolor. Amet volutpat faucibus in vitae. Nibh pulvinar imperdiet pellentesque ultrices commodo. Consequat justo, id dui magna. Quis ut amet in nunc, massa, sed nascetur et. Enim sit odio interdum porttitor ipsum nunc sit. Proin enim diam curabitur a, sit scelerisque sed enim ultrices. Arcu euismod facilisi urna elit pulvinar congue leo. Aliquam consequat consequat sollicitudin non viverra interdum.</p>
+					<p style="border-color: {{ project.lightAccent }};">Malesuada sit vulputate nunc diam placerat facilisis nibh volutpat. Nisl in nullam. Vulputate, lectus velit consequat morbi. Massa arcu at quisque dui, integer lectus nulla. Nisl pulvinar fermentum quisque nisi, vestibulum mollis sed sed. Eleifend egestas id mi molestie ullamcorper dolor. Amet volutpat faucibus in vitae. Nibh pulvinar imperdiet pellentesque ultrices commodo. Consequat justo, id dui magna. Quis ut amet in nunc, massa, sed nascetur et. Enim sit odio interdum porttitor ipsum nunc sit. Proin enim diam curabitur a, sit scelerisque sed enim ultrices.</p>
 				</div>
 			</div>
 			<div class="left__post">
 				<div class="left__post--image"></div>
 				<div class="left__post--content">
 					<h3>Placerat amet, adipiscing vulputate molestie odio quis.</h3>
-					<p style="border-color: {{ project.lightAccent }};">Malesuada sit vulputate nunc diam placerat facilisis nibh volutpat. Nisl libero proin in nullam. Vulputate tellus venenatis, lectus velit consequat morbi. Massa arcu at quisque dui, integer lectus nulla. Nisl pulvinar fermentum quisque nisi, vestibulum mollis sed sed. Eleifend egestas id mi molestie ullamcorper dolor. Amet volutpat faucibus in vitae. Nibh pulvinar imperdiet pellentesque ultrices commodo. Consequat justo, id dui magna. Quis ut amet in nunc, massa, sed nascetur et. Enim sit odio interdum porttitor ipsum nunc sit. Proin enim diam curabitur a, sit scelerisque sed enim ultrices. Arcu euismod facilisi urna elit pulvinar congue leo. Aliquam consequat consequat sollicitudin non viverra interdum.</p>
+					<p style="border-color: {{ project.lightAccent }};">Nisl libero proin in nullam. Vulputate tellus venenatis, lectus velit consequat morbi. Massa arcu at quisque dui, integer lectus nulla. Nisl pulvinar fermentum quisque nisi, vestibulum mollis sed sed. Eleifend egestas id mi molestie ullamcorper dolor. Amet volutpat faucibus in vitae. Nibh pulvinar imperdiet pellentesque ultrices commodo. Consequat justo, id dui magna. Quis ut amet in nunc, massa, sed nascetur et. Enim sit odio interdum porttitor ipsum nunc sit. Proin enim diam curabitur. Aliquam consequat consequat sollicitudin non viverra interdum.</p>
 				</div>
 			</div>
 		</div>
@@ -29,35 +34,35 @@
 				<div class="right__image"></div>
 				<div class="right__content">
 					<h4 style="border-color: {{ project.darkAccent }};">Lorem</h4>
-					<p style="border-color: {{ project.lightAccent }};">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae penatibus nunc eu tellus nec nam ultrices vestibulum neque.</p>
+					<p style="border-color: {{ project.baseColor }};">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae penatibus nunc eu tellus nec nam ultrices vestibulum neque.</p>
 				</div>
 			</div>
 			<div class="right__post">
 				<div class="right__image"></div>
 				<div class="right__content">
 					<h4 style="border-color: {{ project.darkAccent }};">Dolor</h4>
-					<p style="border-color: {{ project.lightAccent }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
+					<p style="border-color: {{ project.baseColor }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
 				</div>
 			</div>
 			<div class="right__post">
 				<div class="right__image"></div>
 				<div class="right__content">
 					<h4 style="border-color: {{ project.darkAccent }};">Dolor</h4>
-					<p style="border-color: {{ project.lightAccent }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
+					<p style="border-color: {{ project.baseColor }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
 				</div>
 			</div>
 			<div class="right__post">
 				<div class="right__image"></div>
 				<div class="right__content">
 					<h4 style="border-color: {{ project.darkAccent }};">Dolor</h4>
-					<p style="border-color: {{ project.lightAccent }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
+					<p style="border-color: {{ project.baseColor }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
 				</div>
 			</div>
 			<div class="right__post">
 				<div class="right__image"></div>
 				<div class="right__content">
 					<h4 style="border-color: {{ project.darkAccent }};">Dolor</h4>
-					<p style="border-color: {{ project.lightAccent }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
+					<p style="border-color: {{ project.baseColor }};">Neque tempus enim ultrices phasellus cras. Eget etiam sed sed nec viverra tempus nisi mollis eu.</p>
 				</div>
 			</div>
 		</div>
