--- a/templates/user/editEmail.html.twig
+++ b/templates/user/editEmail.html.twig
@@ -6,5 +6,5 @@
         action: url('user_edit_email', {'id': user.id}),
     },
     form: form,
-    back_to_list_path: 'user_show',
+    back_to_list_path: 'homepage',
 } %}
