dark/light motive

--- a/templates/editor/form_template.html.twig
+++ b/templates/editor/form_template.html.twig
@@ -17,6 +17,11 @@
     <a class="header__text" href="{{ url('project_colors_generate', {id: project.id}) }}">
 			{{ 'label_generate_colors'|trans }}
     </a>
+    <a class="header__text" href="{{ url('project_colors_change_motive', {id: project.id}) }}">
+			Zmień motyw
+    </a>
+
+    
   </header>
     <section class="container__body">
         <div class="input input__form--container">
