--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -128,6 +128,12 @@ body, html {
     border: 1px solid var(--border-color-on-light);
 }
 
+.header__text:nth-child(3) {
+    margin-top: 0.2rem;
+    margin-bottom: 0.25rem;
+    border: 1px solid var(--border-color-on-light);
+}
+
 .container {
     /* position: relative; */
     width: 100%;
