--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -45,7 +45,9 @@
 			<p class="ml-2 mb-0">Użytkownik ma dodatkowo możliwość:</p>
 			<ul>
 				<li>sprawdzenia kontrastu między kolorem tekstu, a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1,</li>
-				<li>indywidualnego dostosowania zaproponowanych kolorów.</li>
+				<li>indywidualnego dostosowania zaproponowanych kolorów,</li>
+				<li>ustawienia motywu strony na jasny lub ciemny.
+				</li>
 			</ul>
 
 			<p class="ml-2 mb-0">Aby dostosować zaproponowane kolory należy:</p>
@@ -56,6 +58,10 @@
 			<p class="ml-2 mb-0">Aby ponownie wygenerować paletę:</p>
 			<ul>
 				<li>w panelu po lewej stronie kliknąć przycisk “Generuj paletę”.</li>
+			</ul>
+			<p class="ml-2 mb-0">Aby zmienić motyw:</p>
+			<ul>
+				<li>w panelu po lewej stronie kliknąć przycisk “Zmień motyw”.</li>
 			</ul>
 
 		</div>
