--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,107 +1,88 @@
 .content {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  height: 100vh
 }
-
 .left {
-    width: 70%;
+  width: 70%
 }
-
 .left__top {
-    height: 20%;
+  height: 20%
 }
-
 .left__bottom {
-    height: 80%;
+  height: 80%
 }
-
 .right {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column
 }
-
 .logo {
-    font-size: 72px;
-    padding-left: 5%;
-    padding-top: 5%;
+  font-size: 72px;
+  padding-left: 5%;
+  padding-top: 5%
 }
-
 .right__top {
-    height: 30%;
+  height: 30%
 }
-
 .right__center {
-    height: 60%;
+  height: 60%
 }
-
 .right__center p:nth-child(1) {
-    font-size: 17pt;
-    margin-top: 20%;
-    margin-right: 1%;
+  font-size: 20pt;
+  margin-top: 20%;
+  margin-right: 1%
 }
-
 .right__center p:nth-child(2) {
-    margin-right: 10%;
-    font-size: 10pt;
+  margin-right: 10%;
+  font-size: 12pt
 }
-
 .square {
-    width: 25rem;
-    height: 25rem;
-    position: absolute;
-    top: 35%;
-    left: 25%;
+  width: 25rem;
+  height: 25rem;
+  position: absolute;
+  top: 35%;
+  left: 25%
 }
-
 .circle {
-    position: absolute;
-    width: 15rem;
-    height: 15rem;
-    top: 60%;
-    left: 40%;
-    shape-outside: circle();
-    clip-path: circle();
+  position: absolute;
+  width: 15rem;
+  height: 15rem;
+  top: 60%;
+  left: 40%;
+  shape-outside: circle();
+  clip-path: circle()
 }
-
 .triangle {
-    position: absolute;
-    top: 65%;
-    left: 20%;
-    width: 0;
-    height: 0;
-    border-left: 5rem solid transparent;
-    border-right: 5rem solid transparent;
-    border-bottom: 9rem solid;
+  position: absolute;
+  top: 65%;
+  left: 20%;
+  width: 0;
+  height: 0;
+  border-left: 5rem solid transparent;
+  border-right: 5rem solid transparent;
+  border-bottom: 9rem solid
 }
-
 .right__bottom {
-    height: 10%;
-
+  height: 10%
 }
-
 .right__bottom .social {
-    display: flex;
-    gap: 3%;
-    justify-content: flex-end;
-    margin-right: 10%;
+  display: flex;
+  gap: 3%;
+  justify-content: flex-end;
+  margin-right: 10%
 }
-
-
 .navigation {
-    display: flex;
-    flex-direction: column;
-    font-size: 18px;
-    text-align: end;
-    margin-right: 15%;
-    margin-top: 10%;
-    padding-right: 8%;
-    border-right: solid 3px;
-
+  display: flex;
+  flex-direction: column;
+  font-size: 14pt;
+  text-align: end;
+  margin-right: 15%;
+  margin-top: 10%;
+  padding-right: 8%;
+  border-right: solid 3px
 }
-
 .graphic-element svg {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%
 }
