--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -24,11 +24,11 @@
 
 			<p class="ml-2 mt-0">Użytkownik serwisu wypełnia formularz, w którym musi zaznaczyć cztery słowa-skojarzenia, które najlepiej pasują do charakterystyki strony, której projekt chce wykonać.</p>
 
-			<h5 class="ml-3 mb-1">Wybór układu strony</h4>
+			<h5 class="ml-3 mb-1">Wybór szablonu serwisu internetowego</h4>
 
 			<p class="ml-2 mt-0">Aplikacja koncentruje się na procesie wyboru koloru, dlatego projekty są proste i mają służyć tylko jako podpowiedź przy dalszym tworzeniu aplikacji internetowej.</p>
 
-			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe układy takie jak:</p>
+			<p class="ml-2 mb-0">Użytkownik ma do wyboru cztery podstawowe szablony takie jak:</p>
 
 			<ul>
 				<li>strona reklamująca produkt,</li>
