--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -44,13 +44,13 @@
 
 			<p class="ml-2 mb-0">Użytkownik ma dodatkowo możliwość:</p>
 			<ul>
-				<li>sprawdzenia kontrastu między kolorem tekstu, a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1,</li>
+				<li>sprawdzenia kontrastu między kolorem tekstu a kolorem tła zgodnie z kryteriami dostępności WCAG 2.1,</li>
 				<li>indywidualnego dostosowania zaproponowanych kolorów,</li>
 				<li>ustawienia motywu strony na jasny lub ciemny.
 				</li>
 			</ul>
 
-			<p class="ml-2 mb-0">Aby dostosować zaproponowane kolory należy:</p>
+			<p class="ml-2 mb-0">Aby dostosować zaproponowane kolory:</p>
 			<ul>
 				<li>w panelu po lewej stronie ustawić nowy kolor,</li>
 				<li>kliknąć przycisk “Zapisz”.</li>
