--- a/templates/home/info.html.twig
+++ b/templates/home/info.html.twig
@@ -18,7 +18,7 @@
             </p>
             <p class="ml-2 mt-1">
             Serwis ten stanowi integralną część pracy licencjackiej (kierunek: Elektroniczne Przetwarzanie Informacji), 
-            przygotowanej pod kierunkiem prof. dr. hab. Wiesława Lubaszewskiego, na Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.
+            przygotowanej pod kierunkiem prof. dr hab. Wiesława Lubaszewskiego, na Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.
             </p>
         </div>
 	</div>
